[package]
name = "bevy_picking_bvh_backend"
version = "0.1.0"
edition = "2021"
authors = ["Romain Lamarche <lamarcheromain@gmail.com>"]
license = "MIT"
description = "A picking backend plugin for Bevy which uses a BVH tree to improve performances."
resolver = "2"


[dependencies]
bevy_log = "0.15"
bevy_math = "0.15"
bevy_asset = "0.15"
bevy_derive = "0.15"
bevy_utils = "0.15"
bevy_app = "0.15"
bevy_transform = "0.15"
bevy_scene = "0.15"
bevy_hierarchy = "0.15"
bevy_render = "0.15"
bevy_ecs = "0.15"
bevy_reflect = "0.15"
bevy_picking = { version = "0.15", features = ["bevy_mesh_picking_backend"] }
bevy_tasks = "0.15"
# Warn: this version does not work well with cube for example (for AABB with width/height/depth of 0 more generally)
bvh = { version = "0.10.0", optional = true }
futures-lite = "2.0.1"
nalgebra = { version = "0.33.2", optional = true }
crossbeam-channel = "0.5.14"
obvhs = { version = "0.2.0", features = ["parallel"], optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
bevy = "0.15"

[features]
default = ["obvhs"]
obvhs = ["dep:obvhs"]
bvh = ["dep:bvh", "dep:nalgebra"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
